--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 </section>
 <section class="w3l-index-block5" id="membres">
   <!-- main-slider -->
-  <!-- <div class="testimonials py-5">
+  <div class="testimonials py-5">
     <div class="container text-center py-lg-3">
       <div class="heading text-center mx-auto">
         <h3 class="head">Membres</h3>
@@ -270,7 +270,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- /main-slider -->
 </section>
 <section class="w3l-index-block10">
